[project]
name = "cryptopals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Erik Bremen", email = "strtok@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "pycryptodome>=3.21.0",
    "pytest>=8.3.4",
 "ruff>=0.9.2",
]

[project.scripts]
cryptopals = "cryptopals:main"
set_1_challenge_3 = "set_1.challenge_3:main"
set_1_challenge_4 = "set_1.challenge_4:main"
set_1_challenge_6 = "set_1.challenge_6:main"
set_1_challenge_7 = "set_1.challenge_7:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
