[project]
name = "cryptopals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Erik Bremen", email = "strtok@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["pycryptodome>=3.21.0", "pytest>=8.3.4", "ruff>=0.9.2"]

[project.scripts]
challenge_3 = "challenge_3:main"
challenge_4 = "challenge_4:main"
challenge_6 = "challenge_6:main"
challenge_7 = "challenge_7:main"
challenge_8 = "challenge_8:main"
challenge_11 = "challenge_11:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
